--- a/.github/workflows/1-2_delivery.yml
+++ b/.github/workflows/1-2_delivery.yml
@@ -87,7 +87,7 @@ jobs:
           token_format: 'access_token'
           workload_identity_provider: ${{ secrets.PROVIDER_ID }}
           service_account: ${{ secrets.SERVICE_ACCOUNT }}
-          audience: 'https://github.com/Strikers14/nginx-test'
+        #  audience: 'https://github.com/Strikers14/nginx-test'
   
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1.1.1
