--- a/helm-nginx/values.yaml
+++ b/helm-nginx/values.yaml
@@ -65,6 +65,13 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
+strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 10%
+    maxUnavailable: 0
+
+    
 nodeSelector: {}
 
 tolerations: []
