--- a/.github/workflows/2-1_deploy-nginx-gke.yml
+++ b/.github/workflows/2-1_deploy-nginx-gke.yml
@@ -20,7 +20,7 @@ jobs:
     uses: ./.github/workflows/2-2_deploy-helm-gke.yml
     with:
       chart_path: helm-nginx/
-      namespace: nginx
+      namespace: default
       zone: asia-northeast3-a
       release_name: nginx
       image_tag: ${{ inputs.image_tag }}
