--- a/.github/workflows/2-2_deploy-helm-gke.yml
+++ b/.github/workflows/2-2_deploy-helm-gke.yml
@@ -134,3 +134,15 @@ jobs:
 
       - name: List the upgrade result
         run: helm list --filter ${{ inputs.release_name }} --namespace ${{ inputs.namespace }}
+
+      - name: "Check Rollout status"
+        run: |
+          kubectl rollout status deployment ${{ inputs.release_name }} --namespace ${{ inputs.namespace }}
+  
+      - name: "Check Rollout history"
+        run: |
+          kubectl rollout history deployment ${{ inputs.release_name }} --namespace ${{ inputs.namespace }}
+      
+      - name: "Check Pod status"
+        run: |
+          kubectl get pod --namespace ${{ inputs.namespace }} -o wide 
