--- a/.github/workflows/1-1_delivery-nginx.yml
+++ b/.github/workflows/1-1_delivery-nginx.yml
@@ -17,7 +17,7 @@ jobs:
     uses: ./.github/workflows/1-2_delivery.yml
     with:
       profile: "nginx"
-      image_tag: test
+      image_tag: v1
     secrets:
       LOCATION: ${{ secrets.LOCATION }}
       PROJECT_ID: ${{ secrets.PROJECT_ID }}
