--- a/helm-nginx/values.yaml
+++ b/helm-nginx/values.yaml
@@ -66,10 +66,15 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 strategy:
-  type: RollingUpdate
-  rollingUpdate:
-    maxSurge: 1
-    maxUnavailable: 0
+      canary:
+        runtimeConfig:
+          kubernetes:
+            serviceNetworking:
+              service: "nginx"
+              deployment: "nginx"
+        canaryDeployment:
+          percentages: 10%
+          verify: true
 
     
 nodeSelector: {}
