--- a/helm-nginx/values.yaml
+++ b/helm-nginx/values.yaml
@@ -74,7 +74,7 @@ strategy:
               deployment: "nginx"
         canaryDeployment:
           percentages: 50%
-          verify: true
+          verify: false
 
     
 nodeSelector: {}
