--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -13,31 +13,42 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-env:
-  ACR_NAME: demogaurav.azurecr.io
-  ACR_REPO_NAME: demogaurav.azurecr.io/docker-java-app
-  ARTIFACT_NAME: docker-java-app
-  RESOURCE_GROUP: Gaurav-RG
-  AKS_CLUSTER_NAME: Gaurav-AKS-cluster
+#env:
+  #GAR_NAME: asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test
+  #GAR_REPO_NAME: asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test
+  #ARTIFACT_NAME: 5ce69b0952e3
+  #RESOURCE_GROUP: Gaurav-RG
+  #GKE_CLUSTER_NAME: jh-test-gke
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  deployapp:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  prepare:
+    permissions:
+      id-token: write
+      contents: read
 
+    runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Set cluster context
-        uses: azure/aks-set-context@v1
+                    
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v3 
+
+      - name: Print the Helm client version information
+        run: helm version
+
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          cluster-name: ${{ env.AKS_CLUSTER_NAME }}
-          resource-group: ${{ env.RESOURCE_GROUP }}
+          token_format: 'access_token'
+          workload_identity_provider: ${{ secrets.GKE_PROVIDER_ID }}
+          service_account: ${{ secrets.GKE_SERVICE_ACCOUNT }}
+          audience: 'https://github.com/Strikers14/nginx-test'
       
       - name: Deploy app
         uses: azure/k8s-deploy@v1.3
