--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -14,32 +14,23 @@ on:
   workflow_dispatch:
 
 #env:
-  #GAR_NAME: asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test
-  #GAR_REPO_NAME: asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test
-  #ARTIFACT_NAME: 5ce69b0952e3
+  #ACR_NAME: demogaurav.azurecr.io
+  #ACR_REPO_NAME: demogaurav.azurecr.io/docker-java-app
+  #ARTIFACT_NAME: docker-java-app
   #RESOURCE_GROUP: Gaurav-RG
-  #GKE_CLUSTER_NAME: jh-test-gke
+  #AKS_CLUSTER_NAME: Gaurav-AKS-cluster
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  prepare:
-    permissions:
-      id-token: write
-      contents: read
-
+  # This workflow contains a single job called "build"
+  deployapp:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout
-        uses: actions/checkout@v3
-
-                    
-      - name: Helm tool installer
-        uses: Azure/setup-helm@v3 
-
-      - name: Print the Helm client version information
-        run: helm version
+      - uses: actions/checkout@v2
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
@@ -53,7 +44,7 @@ jobs:
       - name: Deploy app
         uses: azure/k8s-deploy@v1.3
         with:
-          namespace: default
+          namespace: nginx
           manifests: |
             ./kubernetes/service.yaml
             ./kubernetes/blue-deploy.yaml
