--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -46,10 +46,10 @@ jobs:
         with:
           namespace: nginx
           manifests: |
-            ./kubernetes/service.yaml
-            ./kubernetes/blue-deploy.yaml
+            ./helm-nginx/templates/service.yaml
+            ./helm-nginx/templates/blue-deploy.yaml
           images: |
-            demogaurav.azurecr.io/green-nginx:1
+            asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test
           strategy: canary
           traffic-split-method: pod
           action: deploy  #deploy is the default; we will later use this to promote/reject
