--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -69,23 +69,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set cluster context
-        uses: azure/aks-set-context@v1
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
-          cluster-name: ${{ env.AKS_CLUSTER_NAME }}
-          resource-group: ${{ env.RESOURCE_GROUP }}
+          token_format: 'access_token'
+          workload_identity_provider: ${{ secrets.GKE_PROVIDER_ID }}
+          service_account: ${{ secrets.GKE_SERVICE_ACCOUNT }}
+          audience: 'https://github.com/Strikers14/nginx-test'
 
       - name: Promote App
         uses: azure/k8s-deploy@v1.3
         if: ${{ success() }}
         with:
-          namespace: default
+          namespace: nginx
           manifests: |
-            ./kubernetes/service.yaml
-            ./kubernetes/green-deploy.yaml
+            ./helm-nginx/templates/service.yaml
+            ./helm-nginx/templates/green-deploy.yaml
           images: |
-            demogaurav.azurecr.io/green-nginx:1
+            asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test
           strategy: canary
           traffic-split-method: pod
           action: promote  #deploy is the default; we will later use this to promote/reject
@@ -98,10 +100,10 @@ jobs:
         with:
           namespace: default
           manifests: |
-            ./kubernetes/service.yaml
-            ./kubernetes/blue-deploy.yaml
+            ./helm-nginx/templates/service.yaml
+            ./helm-nginx/templates/green-deploy.yaml
           images: |
-            demogaurav.azurecr.io/green-nginx:1
+            asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test
           strategy: canary
           traffic-split-method: pod
           action: reject  #deploy is the default; we will later use this to promote/reject
