--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -25,6 +25,10 @@ jobs:
   # This workflow contains a single job called "build"
   deployapp:
     # The type of runner that the job will run on
+    permissions:
+      id-token: write
+      contents: read
+      
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
