--- a/.github/workflows/3_canary.yaml
+++ b/.github/workflows/3_canary.yaml
@@ -52,7 +52,7 @@ jobs:
         run: gcloud components install gke-gcloud-auth-plugin
 
       - name: Get Kubernetes config
-        run: gcloud container clusters get-credentials ${{ secrets.CLUSTER_NAME }} --project ${{ secrets.PROJECT_ID }}
+        run: gcloud container clusters get-credentials ${{ secrets.CLUSTER_NAME }} --zone asia-northeast3-a --project ${{ secrets.PROJECT_ID }}
       
       - name: Deploy app
         uses: azure/k8s-deploy@v1.3
